--- a/bagify/static/css/styles.css
+++ b/bagify/static/css/styles.css
@@ -88,5 +88,21 @@
   width: 100%;
   height: 50px;
 }
+.checkout .select-address label input:checked + div {
+  z-index: 2;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-floating {
+  width: 35px;
+  height: 35px;
+  border-radius: 50px;
+  background-color: #7c8ba5;
+  color: white !important;
+  text-align: center;
+  padding-top: 6px;
+}
 
 /*# sourceMappingURL=styles.css.map */
