--- a/bagify/static/css/styles.scss
+++ b/bagify/static/css/styles.scss
@@ -109,4 +109,23 @@
             height: 50px;
         }
     }
+
+    .select-address {
+        label input:checked + div {
+            z-index: 2;
+            color: #fff;
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+    }
+}
+
+.btn-floating{
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    background-color: #7c8ba5;
+    color: white !important;
+    text-align: center;
+    padding-top: 6px;
 }
