--- a/bagify/templates/bagify/account.html
+++ b/bagify/templates/bagify/account.html
@@ -1,10 +1,55 @@
-{% extends 'bagify/base.html'%} {% block content %}
+{% extends 'bagify/base.html'%}
+{% load static %}
+
+{% block title %}My account{% endblock %}
+
+{% block head %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.1/handlebars.min.js" charset="utf-8"></script>
+<script src="{% static 'js/cookies.js'%}" charset="utf-8"></script>
+<script src="{% static 'js/account.js'%}" charset="utf-8"></script>
+
+<script id="modal-template" type="text/x-handlebars-template">
+    {% verbatim %}
+    <div>
+        <h6><strong>Status:</strong> {{status}}</h6>
+        <p><strong>Date:</strong> {{date}}</p>
+        <h6><strong>Items:</strong></h6>
+
+        {{#each items }}
+            <div class="ml-3">
+                <p class='mb-0'>{{this.name}}</p>
+                <p class=" mt-0 text-capitalize">{{this.color}}, ${{this.price}}</p>
+            </div>
+        {{/each}}
+        <h6><strong>Total:</strong> ${{total}}</h6>
+    </div>
+    {% endverbatim %}
+</script>
+{% endblock %}
+
+{% block content %}
 <main class="container">
+<div class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+      </div>
+    </div>
+  </div>
+</div>
   <div class="row my-2">
     <div class="col-12">
       <h2>{{user}}</h2>
       <hr />
     </div>
+    <!-- TABS -->
     <div class="col-md-3 col-12 my-2">
       <div class="list-group" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="list-account-list" data-toggle="list" href="#list-account" role="tab"aria-controls="home">Account</a>
@@ -13,8 +58,11 @@
         <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
       </div>
     </div>
-    <div class="col-12 col-md-8 my-2">
+    <!-- END OF TABS -->
+    <!-- CONTENT -->
+    <div class="col-md-9 my-2">
       <div class="tab-content" id="nav-tabContent">
+          <!-- ACCOUNT -->
         <div class="tab-pane fade show active" id="list-account" role="tabpanel" aria-labelledby="list-account-list">
             <div class="row my-3">
                 <div class="col-12">
@@ -25,80 +73,126 @@
                     <p>Email: {{user.email}}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6">
+            <div class="row js-orders">
+                <div class=" col-12">
                   <h4 class="text-center">Latest Orders:</h4>
                   <hr class="mt-1">
                   <div class="list-group-flush list-group">
                     {% for order in user.orders.all|dictsort:"date"|slice:"5" %}
 
-                    <li class="list-group-item">
-                      <a class="btn-floating btn-sm"><i class="far fa-eye"></i></a>
-                      {{order}}
+                    <li class="list-group-item" data-order="{{order.pk}}">
+
+                      <p class="d-inline-block">{{order}}</p>
+                      <a class="btn-floating float-right btn-sm"><i class="far fa-eye"></i></a>
                     </li>
                     {% empty %}
                     <li class="list-group">No orders.</li>
                     {% endfor %}
                   </div>
                 </div>
-                <div class="col-lg-6">
-                  <h4 class="text-center">Home address:</h4>
-                  <hr class="mt-1">
-                  {%for address in user.addresses.all%}
-                    {%if address.default%}
-                    {{address}}
-                  {% endif%}
-                  {% empty %}
-                  <p>No saved address</p>
-                  {%endfor%}
-                </div>
             </div>
         </div>
+        <!-- END OF ACCOUNT -->
+        <!-- ORDERS -->
         <div class="tab-pane fade my-2" id="list-orders" role="tabpanel" aria-labelledby="list-orders-list">
           <h2>My orders</h2>
+          <ul class="list-group js-orders">
+              {% for order in request.user.orders.all %}
+              <li class="list-group-item" data-order="{{order.pk}}">
+
+                <p class="d-inline-block">{{order}}</p>
+                <a class="btn-floating float-right btn-sm"><i class="far fa-eye"></i></a>
+              </li>
+            {% empty %}
+            <li class="list-group-item">Cras justo odio</li>
+            {% endfor %}
+          </ul>
+
         </div>
+        <!-- END OF ORDERS -->
+        <!-- ADDRESS -->
         <div class="tab-pane fade my-2" id="list-address" role="tabpanel" aria-labelledby="list-address-list">
-          a
+            <h2>Saved Addresses:</h2>
+            <ul class="list-group js-addresses">
+                {% for address in request.user.addresses.all %}
+              <li class="list-group-item" >
+                  {{address.address}}
+
+                      <button type="button" class="float-right btn btn-sm btn-danger" data-id="{{address.pk}}" name="button">Remove</button>
+
+              </li>
+              {% empty %}
+              <li class="list-group-item no_saved">No address saved</li>
+              {% endfor %}
+
+            </ul>
+            <form method="post" class="address-form">
+            <div class="row my-5">
+                <div class="col-12">
+                    <h5 class="m-0">Save address:</h5>
+                </div>
+                {% for field in addressForm %}
+                  {% if field.label == 'Country' %}
+                <div class="col-6">
+                  <label for="{{field.auto_id}}" class=" text-muted">{{field.label}}:</label>
+                  {{field}}
+                </div>
+                {% else %}
+                <div class="md-form col-6">
+                  {{field}}
+                  <label for="{{field.auto_id}}" class="pl-3">{{field.label}}</label>
+                </div>
+                    {% endif %}
+                {% endfor %}
+                <input type="submit" name="submit" class="btn btn-indigo" placeholder="submit">
+
+            </div>
+            </form>
+
         </div>
+        <!-- END OF ADDRESS -->
+        <!-- SETTINGS -->
         <div class="tab-pane fade my-2" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
-            <form class="clearfix" method="post">
+            <form class="clearfix js-reset_password" method="post">
                 <div class="form-row">
                     <h4>Change password</h4>
                     <div class="col-12">
                         <div class="md-form">
-                          <input type="text" id="old-password" class="form-control">
+                          <input required type="text" id="old-password" name='current_pas' class="form-control">
                           <label for="old-password">Current password</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="md-form">
-                          <input type="text" id="old-password" class="form-control">
-                          <label for="old-password">Current password</label>
+                          <input type="text" name="new_pas" required id="new-password" class="form-control">
+                          <label for="new-password">New password</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="md-form">
-                          <input type="text" id="old-password" class="form-control">
-                          <label for="old-password">Current password</label>
+                          <input required type="text" id="confirm-password" name='confirm_pas' class="form-control">
+                          <label for="confirm-password">Confirm password</label>
                         </div>
                     </div>
 
                 </div>
-                <button type="button" class="btn btn-indigo float-right">Change password</button>
+                <button type="submit" class="btn btn-indigo float-right">Change password</button>
             </form>
 
-            <form class="clearfix" method="post">
+            <form class="clearfix js-delete_account" method="post">
                 <h4>Delete account</h4>
                 <div class="md-form">
                   <i class="fas fa-lock prefix"></i>
-                  <input type="password" id="inputValidationEx2" class="form-control validate">
+                  <input required type="password" id="inputValidationEx2" class="form-control validate">
                   <label for="inputValidationEx2" data-error="wrong" data-success="right">Type your password</label>
                 </div>
-                <button type="button" class="btn btn-danger float-right">Delete Account</button>
+                <button type="submit" class="btn btn-danger float-right">Delete Account</button>
             </form>
         </div>
+        <!-- END OF SETTINGS -->
       </div>
     </div>
+    <!-- END OF CONTENT -->
   </div>
 </main>
 {% endblock %}
