--- a/bagify/static/css/styles.scss
+++ b/bagify/static/css/styles.scss
@@ -17,9 +17,10 @@
   }
 
   .color-option input:checked + .color-button {
-      opacity: 0.5;
-      -webkit-box-shadow: 0;
-      box-shadow: 0;
+      opacity: 0.8;
+      -webkit-box-shadow: 5px 5px 5px #666;
+-moz-box-shadow: 5px 5px 5px #666;
+box-shadow: 5px 5px 5px #666;
   }
 
   .frame_row img {
@@ -68,9 +69,9 @@
       background: #E54D42;
       border-left-color: #B82E24;
     }
-    .danger {
-      background: #E54D42;
-      border-left-color: #B82E24;
+    .success {
+      background: rgba(121, 193, 120, 1);
+      border-left-color: rgba(4, 130, 63, 1);
     }
 }
 
@@ -128,4 +129,18 @@
     color: white !important;
     text-align: center;
     padding-top: 6px;
+}
+#secondary-carousel {
+    img{
+        height: 300px;
+        width: 100%;
+        object-fit: cover;
+    }
+
+}
+.title-header {
+    background: rgba(245, 245, 245, 0.9);
+    padding: 50px 0;
+    font-weight: 900;
+    letter-spacing: 7px
 }
