--- a/bagify/templates/registration/password_reset_done.html
+++ b/bagify/templates/registration/password_reset_done.html
@@ -1,5 +1,11 @@
 {% extends 'bagify/base.html' %}
 
 {% block content %}
-Reseted
+<div class="p-5">
+    <div class="alert alert-success" role="alert">
+<h4 class="alert-heading">Email Sent.</h4>
+<p>Please check your email to proceed.</p>
+<hr>
+</div>
+</div>
 {% endblock %}
