--- a/bagify/templates/registration/password_reset_form.html
+++ b/bagify/templates/registration/password_reset_form.html
@@ -1,10 +1,13 @@
 {% extends 'bagify/base.html' %}
 
 {% block content %}
-  <h3>Forgot password</h3>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-  </form>
+<main class="container my-3 text-center">
+    <h3>Forgot password:</h3>
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</main>
+
 {% endblock %}
