--- a/bagify/templates/bagify/base.html
+++ b/bagify/templates/bagify/base.html
@@ -23,18 +23,13 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarContent">
-                    <!-- <ul class="navbar-nav mr-auto">
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false"><i class="fa fa-list-alt d-sm-none"></i> Categories
-                          </a>
-                          <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
-
-                            <a class="dropdown-item" href="collections/"></a>
-
-                          </div>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a href="{% url 'collections' %}" class="nav-link mr-auto text-uppercase">Collections</a>
                         </li>
-                    </ul> -->
+                    </ul>
+
+
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                           <a class="nav-link" href="{% url 'cart' %}">
