--- a/bagify/templates/bagify/transaction_completed.html
+++ b/bagify/templates/bagify/transaction_completed.html
@@ -6,7 +6,7 @@
     <div class="p-5">
         <div class="alert alert-success" role="alert">
   <h4 class="alert-heading">Transaction Completed!</h4>
-    <p>Transaction was completed, for current details and statsu of the order check your orders at <a href="{% url 'account' %}" class="alert-link">your account page.</a></p>
+    <p>Transaction was completed, for current details and status of the order check your orders at <a href="{% url 'account' %}" class="alert-link">your account page.</a></p>
     <hr>
     <p class="mb-0">Hope you enjoyed pretending to make a order with us.</p>
     </div>
