--- a/bagify/templates/registration/activation_email.html
+++ b/bagify/templates/registration/activation_email.html
@@ -44,6 +44,7 @@
             <p>We are glad to have you on board!</p>
 
             <a href="{{site}}/activate/{{activation_key}}" class="btn btn-primary d-block p-3 my-3">ACTIVATE YOUR ACCOUNT</a>
+            {{site}}/activate/{{activation_key}}
             <p>Happy shopping.</p>
             <small>If you did <span class="bg-danger">not</span> registered an account on Bagify please ignore this message.</small>
         </main>
