--- a/bagify/templates/bagify/base.html
+++ b/bagify/templates/bagify/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png'%}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' }">
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
