--- a/bagify/templates/bagify/collections.html
+++ b/bagify/templates/bagify/collections.html
@@ -26,7 +26,7 @@ Collections
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
                 <div class="view">
                     {% if item.url %}<a href="{{item.url}}">{% endif %}
-                    <img class="d-block w-100" src="{{ item.image.url }}" alt="slide">
+                    <img class="d-block w-100" src="{{ item.image }}" alt="slide">
                     <div class="mask rgba-black-light"></div>
                     </a>
                 </div>
@@ -113,7 +113,7 @@ Collections
 
                 <!-- Card image -->
                 <div class="view view-cascade img-narrower overlay">
-                  <img src="{{display.image.url}}" class="card-img" alt="product photo">
+                  <img src="{{display.image}}" class="card-img" alt="product photo">
                   <a href="/product/{{item.id}}">
                     <div class="mask rgba-white-slight waves-effect waves-light"></div>
                   </a>
